Use paths and URI instead of strings in FsResponseStore